Add blog posting v8

--- a/home.html
+++ b/home.html
@@ -419,7 +419,7 @@
         </div>
     </section>
 
-    <!-- FAQ - Вопрос = Ответ. -->
+    <!-- FAQ -->
     <div class="faq-header">
         <h2 class="faq-title theme-text">FAQ</h2>
         <p class="faq-subtitle">All the answers to your questions</p>
