Add blog posting v10

--- a/blog.html
+++ b/blog.html
@@ -341,8 +341,9 @@
 
             <label class="theme-text">Загрузить превью изображение</label>
             <div class="upload-section">
-                <input type="file" id="preview-file" accept="image/jpeg,image/png" />
-                <button class="upload-btn" id="upload-btn">Загрузить</button>
+                <input type="file" id="preview-file-input" accept="image/*" class="input-field theme-input">
+                <button type="button" class="upload-btn" id="upload-preview-btn">Загрузить</button>
+                <input type="hidden" id="preview-image-url"> <!-- для хранения URL после загрузки -->
             </div>
 
 
