Add blog posting v16

--- a/blog.html
+++ b/blog.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ValeyevStudio - Blog</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/themes.css">
-    <link rel="stylesheet" href="css/typography.css">
-    <link rel="stylesheet" href="css/blog.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/themes.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/blog.css">
     <!-- Подключение кастомных стилей -->
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/menu_dropdown.css">
-    <link rel="stylesheet" href="css/captcha.css">
-    <link rel="stylesheet" href="css/interactivehelp.css">
-    <link rel="stylesheet" href="css/pushnotify.css">
-    <link rel="stylesheet" href="css/modal_message.css">
-    <link rel="stylesheet" href="css/banner_promo.css">
-    <link rel="stylesheet" href="css/modal_promo.css">
-    <link rel="stylesheet" href="css/deposit.css">
-    <link rel="stylesheet" href="css/modal_premium.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/menu_dropdown.css">
+    <link rel="stylesheet" href="/css/captcha.css">
+    <link rel="stylesheet" href="/css/interactivehelp.css">
+    <link rel="stylesheet" href="/css/pushnotify.css">
+    <link rel="stylesheet" href="/css/modal_message.css">
+    <link rel="stylesheet" href="/css/banner_promo.css">
+    <link rel="stylesheet" href="/css/modal_promo.css">
+    <link rel="stylesheet" href="/css/deposit.css">
+    <link rel="stylesheet" href="/css/modal_premium.css">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 
@@ -395,19 +395,19 @@
     </footer>
 
     <!-- Подключенные скрипты -->
-    <script src="js/translate-language.js"></script>
-    <script src="js/themeswitch.js"></script>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+    <script src="/js/translate-language.js"></script>
+    <script src="/js/themeswitch.js"></script>
+    <script src="/https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     <script src="/js/blog.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/menu_dropdown.js"></script>
-    <script src="js/download.js"></script>
-    <script src="js/captcha.js"></script>
-    <script src="js/pushnotify.js"></script>
-    <script src="js/banner_promo.js"></script>
-    <script src="js/modal_promo.js"></script>
-    <script src="js/modal_deposit.js" defer></script>
-    <script src="js/modal_premium.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/menu_dropdown.js"></script>
+    <script src="/js/download.js"></script>
+    <script src="/js/captcha.js"></script>
+    <script src="/js/pushnotify.js"></script>
+    <script src="/js/banner_promo.js"></script>
+    <script src="/js/modal_promo.js"></script>
+    <script src="/js/modal_deposit.js" defer></script>
+    <script src="/js/modal_premium.js"></script>
 </body>
 
 </html>
