--- a/blog.html
+++ b/blog.html
@@ -397,7 +397,7 @@
     <!-- Подключенные скрипты -->
     <script src="/js/translate-language.js"></script>
     <script src="/js/themeswitch.js"></script>
-    <script src="/https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     <script src="/js/blog.js"></script>
     <script src="/js/menu.js"></script>
     <script src="/js/menu_dropdown.js"></script>
