--- a/blog.html
+++ b/blog.html
@@ -27,17 +27,17 @@
 <body>
     <header class="header">
         <div class="burger theme-icon" id="burger-btn">
-            <img src="assets/icons/menu-burger.svg" alt="Menu" />
+            <img src="/assets/icons/menu-burger.svg" alt="Menu" />
         </div>
         <div class="logo theme-text">
-            <img src="assets/icons/logo.svg" alt="Logo" class="logo-img theme-icon">
+            <img src="/assets/icons/logo.svg" alt="Logo" class="logo-img theme-icon">
             ValeyevStudio
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="home.html" class="nav-home">Home</a></li>
-                <li><a href="products.html" class="nav-our-products">Our Products</a></li>
-                <li><a href="about.html" class="nav-about-us">About us</a></li>
+                <li><a href="/home.html" class="nav-home">Home</a></li>
+                <li><a href="/products.html" class="nav-our-products">Our Products</a></li>
+                <li><a href="/about.html" class="nav-about-us">About us</a></li>
             </ul>
         </nav>
         <div class="actions">
@@ -46,66 +46,66 @@
             <div class="language-switch has-tooltip">
                 <span class="tooltip theme-text" data-tooltip="select-language">Select language</span>
                 <!-- Флаг страны и код -->
-                <img src="assets/icons/flag/usa.png" alt="Flag" class="selected-flag">
+                <img src="/assets/icons/flag/usa.png" alt="Flag" class="selected-flag">
                 <!-- Отображаем флаг по умолчанию -->
                 <span class="language-code">EN</span>
-                <img src="assets/icons/angle-small-down.svg" alt="Arrow" class="arrow theme-icon">
+                <img src="/assets/icons/angle-small-down.svg" alt="Arrow" class="arrow theme-icon">
                 <!-- Выпадающий список -->
                 <div class="dropdown-menu">
                     <div class="dropdown-item" data-lang="en-US">
-                        <img src="assets/icons/flag/usa.png" alt="USA Flag" class="flag">
+                        <img src="/assets/icons/flag/usa.png" alt="USA Flag" class="flag">
                         <span>EN</span>
                     </div>
                     <div class="dropdown-item" data-lang="ru-RU">
-                        <img src="assets/icons/flag/russia.png" alt="Russia Flag" class="flag">
+                        <img src="/assets/icons/flag/russia.png" alt="Russia Flag" class="flag">
                         <span>RU</span>
                     </div>
                     <div class="dropdown-item" data-lang="uk-UA">
-                        <img src="assets/icons/flag/ukraine.png" alt="Ukraine Flag" class="flag">
+                        <img src="/assets/icons/flag/ukraine.png" alt="Ukraine Flag" class="flag">
                         <span>UA</span>
                     </div>
                     <div class="dropdown-item" data-lang="be-BY">
-                        <img src="assets/icons/flag/belarus.png" alt="Belarus Flag" class="flag">
+                        <img src="/assets/icons/flag/belarus.png" alt="Belarus Flag" class="flag">
                         <span>BY</span>
                     </div>
                     <div class="dropdown-item" data-lang="kk-KZ">
-                        <img src="assets/icons/flag/kazakhstan.png" alt="Kazakhstan Flag" class="flag">
+                        <img src="/assets/icons/flag/kazakhstan.png" alt="Kazakhstan Flag" class="flag">
                         <span>KZ</span>
                     </div>
                     <div class="dropdown-item" data-lang="kr-TR">
-                        <img src="assets/icons/flag/crimea_tatar.png" alt="Crimean Tatar Flag" class="flag">
+                        <img src="/assets/icons/flag/crimea_tatar.png" alt="Crimean Tatar Flag" class="flag">
                         <span>TR</span>
                     </div>
                     <div class="dropdown-item" data-lang="ka-GE">
-                        <img src="assets/icons/flag/georgia.png" alt="Geogria Flag" class="flag">
+                        <img src="/assets/icons/flag/georgia.png" alt="Geogria Flag" class="flag">
                         <span>GE</span>
                     </div>
                     <div class="dropdown-item" data-lang="pl-PL">
-                        <img src="assets/icons/flag/poland.png" alt="Poland Flag" class="flag">
+                        <img src="/assets/icons/flag/poland.png" alt="Poland Flag" class="flag">
                         <span>PL</span>
                     </div>
                     <div class="dropdown-item" data-lang="de-DE">
-                        <img src="assets/icons/flag/germany.png" alt="Germany Flag" class="flag">
+                        <img src="/assets/icons/flag/germany.png" alt="Germany Flag" class="flag">
                         <span>DE</span>
                     </div>
                     <div class="dropdown-item" data-lang="es-ES">
-                        <img src="assets/icons/flag/spanish.png" alt="Spanish Flag" class="flag">
+                        <img src="/assets/icons/flag/spanish.png" alt="Spanish Flag" class="flag">
                         <span>ES</span>
                     </div>
                     <div class="dropdown-item" data-lang="fr-FR">
-                        <img src="assets/icons/flag/france.png" alt="France Flag" class="flag">
+                        <img src="/assets/icons/flag/france.png" alt="France Flag" class="flag">
                         <span>FR</span>
                     </div>
                     <div class="dropdown-item" data-lang="fi-FI">
-                        <img src="assets/icons/flag/finland.png" alt="Finland Flag" class="flag">
+                        <img src="/assets/icons/flag/finland.png" alt="Finland Flag" class="flag">
                         <span>FI</span>
                     </div>
                     <div class="dropdown-item" data-lang="ko-KR">
-                        <img src="assets/icons/flag/south_korea.png" alt="South Korea Flag" class="flag">
+                        <img src="/assets/icons/flag/south_korea.png" alt="South Korea Flag" class="flag">
                         <span>KR</span>
                     </div>
                     <div class="dropdown-item" data-lang="zh-CN">
-                        <img src="assets/icons/flag/china.png" alt="China Flag" class="flag">
+                        <img src="/assets/icons/flag/china.png" alt="China Flag" class="flag">
                         <span>CN</span>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
             <!-- Кнопка входа (Sign In) -->
             <div class="has-tooltip">
                 <button class="signin-btn">
-                    <img class="signin-icon" src="assets/icons/user.svg" alt="User Icon">
+                    <img class="signin-icon" src="/assets/icons/user.svg" alt="User Icon">
                     <span class="signin-text">Sign In</span>
                 </button>
                 <span class="tooltip theme-text" data-tooltip="sign-in">Sign in to your account</span>
@@ -373,23 +373,23 @@
     <footer class="footer theme-line">
         <div class="footer-content">
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
-            <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
-            <a href="brand.html" class="footer-link nav-partners">Partners</a>
-            <a href="referal.html" class="footer-link nav-referals">Referal program</a>
+            <a href="/about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
+            <a href="/brand.html" class="footer-link nav-partners">Partners</a>
+            <a href="/referal.html" class="footer-link nav-referals">Referal program</a>
         </div>
         <div class="footer-social">
             <span class="social-platforms">Social:</span>
             <a href="https://vk.com/nikitavaleyev" target="_blank">
-                <img src="assets/icons/social/vk.svg" alt="VK" class="theme-icon">
+                <img src="/assets/icons/social/vk.svg" alt="VK" class="theme-icon">
             </a>
             <a href="https://www.youtube.com/channel/@NikitaValeyev" target="_blank">
-                <img src="assets/icons/social/youtube.svg" alt="YouTube" class="theme-icon">
+                <img src="/assets/icons/social/youtube.svg" alt="YouTube" class="theme-icon">
             </a>
             <a href="https://t.me/nikitavaleyev_musician" target="_blank">
-                <img src="assets/icons/social/telegram.svg" alt="Telegram" class="theme-icon">
+                <img src="/assets/icons/social/telegram.svg" alt="Telegram" class="theme-icon">
             </a>
             <a href="https://instagram.com/nikitavaleyev" target="_blank">
-                <img src="assets/icons/social/instagram.svg" alt="Instagram" class="theme-icon">
+                <img src="/assets/icons/social/instagram.svg" alt="Instagram" class="theme-icon">
             </a>
         </div>
     </footer>
