Add new design 2.0

--- a/blog.html
+++ b/blog.html
@@ -251,7 +251,7 @@
     </div>
 
     <!-- Модальное окно: Premium subscirbe & price - buy -->
-    <div class="modal-premium-subscribe-backdrop">      
+    <div class="modal-premium-subscribe-backdrop">
         <div class="modal-premium-subscribe-container theme-modal">
             <h2 class="modal-premium-subscribe-title theme-text">Purchase of a premium subscription</h2>
             <p class="modal-premium-subscribe-description theme-text">
@@ -326,6 +326,10 @@
         </div>
         <!-- логика из js -->
     </div>
+
+    <div class="full-post-container" style="display: none;">
+        <!-- сюда будет вставляться пост по slug -->
+    </div>  
 
     <div class="modal-blog-edit" id="modal-blog-edit">
         <div class="modal-content theme-modal">
