Add new design 13

--- a/blog.html
+++ b/blog.html
@@ -317,7 +317,7 @@
     </header>
 
     <div class="posts-container">
-        <div class="post-card add-card theme-blog-cards" id="add-blog" style="display: none;">
+        <div class="post-add-card add-card theme-blog-cards" id="add-blog" style="display: none;">
             <div class="add-card-content" id="add-blog-post">
                 <img class="add-icon theme-icon" src="/assets/icons/add.svg" alt="Добавить" />
                 <hr class="add-divider theme-line" />
