Add new design 20

--- a/blog.html
+++ b/blog.html
@@ -341,13 +341,13 @@
             <input type="text" class="input-field theme-input" placeholder="Введите заголовок">
 
             <label class="theme-text">Превью описание</label>
-            <textarea class="input-field theme-input" placeholder="Краткое описание"></textarea>
+            <textarea class="input-field theme-input" placeholder="Введите описание..."></textarea>
 
             <label class="theme-text">Загрузить превью изображение</label>
             <div class="upload-section">
                 <input type="file" id="preview-file-input" accept="image/*" class="input-field theme-input">
                 <button type="button" class="upload-btn" id="upload-preview-btn">Загрузить</button>
-                <input type="hidden" id="preview-image-url"> <!-- для хранения URL после загрузки -->
+                <input type="hidden" id="preview-image-url">
             </div>
 
 
