Add new design 33

--- a/blog.html
+++ b/blog.html
@@ -341,7 +341,7 @@
             <input type="text" class="input-field theme-input" placeholder="Введите заголовок">
 
             <label class="theme-text">Превью описание</label>
-            <textarea class="input-field theme-input" placeholder="Введите описание..."></textarea>
+            <textarea id="preview-description" class="input-field theme-input" placeholder="Введите описание..."></textarea>
 
             <label class="theme-text">Загрузить превью изображение</label>
             <div class="upload-section">
