Update secure settings device activity

--- a/settings.html
+++ b/settings.html
@@ -130,6 +130,7 @@
 
 <div class="secure-device-activity-card">
   <h3 class="secure-title">Устройства и активность</h3>
+      <div class="section-underline"></div>
 
   <!-- 🔵 Текущее устройство -->
   <div class="current-device">
